<resources>
    <string name="app_name">TvTracker</string>
    <string name="popular_movies">Popular movies</string>
    <string name="summary">Summary</string>
    <string name="trailers">Trailers</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="users">Users</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="on_the_air">On The Air</string>
    <string name="enter_username">Enter username...</string>
    <string name="enter_email">Enter email...</string>
    <string name="enter_password">Enter password...</string>
    <string name="create_account">Create Account</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters.</string>
    <string name="creating_account">Creating account...</string>
    <string name="fill_fields">Please, fill all fields.</string>
    <string name="welcome_to_tvtracker">Welcome to TvTracker</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_create_now">Don\'t have an account yet? Create now!</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="login_with_google_account">Login with Google account</string>
    <string name="logout_again_error">Something went wrong. Please try logging out again.</string>
    <string name="profile_information">Profile Information</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="statistics">Statistics</string>
    <string name="number_of_watched_episodes">Number of watched episodes</string>
    <string name="number_of_watched_movies">Number of watched movies</string>
    <string name="enter_status">Enter status...</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_profile_information">Edit profile information</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="watched">Watched</string>
    <string name="comments">Comments</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="comment_is_sent">Comment is sent.</string>
    <string name="empty_comment_error">Can\'t send empty comment, please write something.</string>
    <string name="error_load_comments">Can not load comments.</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="search">Search</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_tv_shows">Search Tv Shows</string>
    <string name="all_users">All users</string>
    <string name="followed_users">Followed Users</string>
    <string name="followed">Followed</string>
    <string name="watchlist">Watchlist</string>
    <string name="unfollow">Unfollow</string>
</resources>
