<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/movies"
            />
        <item
            android:id="@+id/nav_tvShows"
            android:icon="@drawable/ic_tv_black_24dp"
            android:title="@string/tv_shows"
            />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_action_format_list_bulleted"
            android:title="@string/watchlist"
            />
        <item
            android:id="@+id/nav_users"
            android:title="@string/users"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            />
        <item
            android:id="@+id/nav_myProfile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />

    </group>

</menu>