<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/welcome_to_tvtracker"
        android:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewLoginLable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trailersLabel_marginTop_32"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textSize_35"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLogin" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginLeft="@dimen/cardView_margin"
        android:layout_marginRight="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/marginTop_50"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textViewLoginLable" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginLeft="@dimen/cardView_margin"
        android:layout_marginRight="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardView_margin"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordLogin" />

    <TextView
        android:id="@+id/textViewDontHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:text="@string/don_t_have_an_account_yet_create_now"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogleSignIn" />


    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoogleSignIn"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        />


</android.support.constraint.ConstraintLayout>