<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draweLayoutProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movies.details.MovieDetailsActivity">


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_appBarLayout_height_200"
            android:background="@color/colorPrimary" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/cardView_margin"
            android:src="@drawable/noimage"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarProfile" />

        <ImageButton
            android:id="@+id/imageButtonDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:background="@null"
            android:contentDescription="@string/delete_account"
            android:src="@drawable/ic_delete"
            app:layout_constraintTop_toBottomOf="@id/toolbarProfile"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/imageButtonEditInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:background="@null"
            android:contentDescription="@string/edit_profile_information"
            android:src="@drawable/ic_edit_black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarProfile"
            />

        <EditText
            android:id="@+id/editTextStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:hint="@string/enter_status"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewProfilePicture" />


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarProfile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="parallax"
            app:title="My Profile"
            app:titleTextColor="@color/white">

        </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/textViewProfileInformationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:text="@string/profile_information"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_20"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/editTextStatus" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cardView_margin"
            android:layout_marginStart="@dimen/cardView_margin"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/username"
            android:textSize="@dimen/textSize_17"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileInformationLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardView_margin"
            android:inputType="text"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintLeft_toRightOf="@id/textViewUsername"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileInformationLabel"
            tools:text="samanta17" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cardView_margin"
            android:layout_marginStart="@dimen/cardView_margin"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/email"
            android:textSize="@dimen/textSize_17"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textViewUsername"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardView_margin"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintLeft_toRightOf="@id/textViewUsername"
            app:layout_constraintTop_toBottomOf="@id/editTextUsername"
            tools:text="samanta17" />

        <ImageButton
            android:id="@+id/imageButtonUploadStatus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@null"
            android:contentDescription="@string/confirm_changes"
            android:src="@drawable/ic_done"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/imageButtonUploadStatus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

        <TextView
            android:id="@+id/textViewProfileStatisticsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:text="@string/statistics"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_20"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageButtonUploadStatus" />

        <TextView
            android:id="@+id/textViewWatchedEpisodesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:text="@string/number_of_watched_episodes"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileStatisticsLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/cardView_margin"/>

        <TextView
            android:id="@+id/textViewNumberOfWatchedEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/cardView_margin"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintLeft_toRightOf="@id/textViewWatchedEpisodesLabel"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileStatisticsLabel"
            tools:text="25" />

        <TextView
            android:id="@+id/textViewWatchedMoviesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardView_margin"
            android:text="@string/number_of_watched_movies"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintTop_toBottomOf="@id/textViewNumberOfWatchedEpisodes"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/cardView_margin"/>

        <TextView
            android:id="@+id/textViewNumberOfWatchedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_35"
            android:layout_marginTop="@dimen/cardView_margin"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintLeft_toRightOf="@id/textViewWatchedMoviesLabel"
            app:layout_constraintTop_toBottomOf="@id/textViewNumberOfWatchedEpisodes"
            tools:text="25" />


    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navViewMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu" />


</android.support.v4.widget.DrawerLayout>