<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginRegistration.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRegistration"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/textViewRegistrationLable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trailersLabel_marginTop_32"
        android:text="Registration"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textSize_35"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegistration" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginLeft="@dimen/cardView_margin"
        android:layout_marginRight="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/marginTop_50"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textViewRegistrationLable" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginLeft="@dimen/cardView_margin"
        android:layout_marginRight="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginLeft="@dimen/cardView_margin"
        android:layout_marginRight="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardView_margin"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/cardView_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:id="@+id/buttonCreateAccount"/>


</android.support.constraint.ConstraintLayout>