<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_appBarLayout_height_200"
        android:background="@color/colorPrimary"
        android:id="@+id/viewUserProfile"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewUserImage"
        android:layout_width="@dimen/width_height_150"
        android:layout_height="@dimen/width_height_150"
        android:layout_marginTop="@dimen/cardView_margin"
        android:src="@drawable/noimage"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarUserProfile" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:hint="@string/enter_status"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewUserImage" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarUserProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="parallax"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textViewUserProfileInformationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardView_margin"
        android:text="@string/profile_information"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_20"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/viewUserProfile" />

    <TextView
        android:id="@+id/textViewUserUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/username"
        android:textSize="@dimen/textSize_17"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewUserProfileInformationLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewUserProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardView_margin"
        android:textSize="@dimen/textSize_17"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintLeft_toRightOf="@id/textViewUserUsernameLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewUserProfileInformationLabel"
        tools:text="samanta17" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/email"
        android:textSize="@dimen/textSize_17"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewUserUsernameLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardView_margin"
        android:textSize="@dimen/textSize_17"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintLeft_toRightOf="@id/textViewUserUsernameLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewUserProfileUsername"
        tools:text="samanta17" />


    <TextView
        android:id="@+id/textViewUserWatchlistLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="31dp"
        android:text="@string/watchlist"
        android:textSize="@dimen/detailsTitle_textSize"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailLabel" />

    <ImageButton
        android:id="@+id/imageButtonSeeUserWatchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cardView_margin"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailLabel" />


</android.support.constraint.ConstraintLayout>
